Open social media links on native apps directly

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -45,9 +45,9 @@
                     <img src="res/jardinlogo.png">
                 </div>
                 <div class="socialbar">
-                    <a href="https://www.facebook.com/jardinpalacio"><div class="socialbutton"><img src="res/facebook.png"></div></a>
-                    <a href="https://instagram.com/jardinpalacio/"><div class="socialbutton"><img src="res/instagram.png"></div></a>
-                    <a href="https://twitter.com/jardin_palacio"><div class="socialbutton"><img src="res/twitter.png"></div></a>
+                    <social class="socialbutton" id="fb"><img src="res/facebook.png"></social>
+                    <social class="socialbutton" id="in"><img src="res/instagram.png"></social>
+                    <social class="socialbutton" id="tw"><img src="res/twitter.png"></social>
                 </div>
             </content>
         </board>
