--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -55,8 +55,9 @@
             <headbar>
                 <div class="titulo">Fotos</div>
             </headbar>
-            <content>
-                <div><div class="frame" style="text-align: center;"><i class="fa fa-info-circle fa-3x"></i><br>No hay contenido disponible aún.</div></div>
+            <content id="photosframe">
+                <iframe src="http://xn--jardnpalacio-vfb.com/?page_id=11" width="100%" height="100%" frameborder="0" /></iframe>
+                <!-- <div><div class="frame" style="text-align: center;"><i class="fa fa-info-circle fa-3x"></i><br>No hay contenido disponible aún.</div></div> -->
                 <!-- <div class="frame" style="text-align: center;">
                     <img width="100%" src="res/loading.gif">
                 </div> -->
@@ -66,8 +67,10 @@
             <headbar>
                 <div class="titulo">Eventos</div>
             </headbar>
-            <content>
-                <div><div class="frame" style="text-align: center;"><i class="fa fa-info-circle fa-3x"></i><br>No hay contenido disponible aún.</div></div>
+            <content id="eventsframe">
+                <iframe src="http://xn--jardnpalacio-vfb.com/?page_id=68" width="100%" height="100%" frameborder="0"/></iframe>
+                <!-- <iframe src="http://xn--jardnpalacio-vfb.com/?page_id=68" width="100%" height="170%" frameborder="0" style="position:absolute; clip:rect(190px,1100px,800px,250px); top:-70%"/></iframe> -->
+                <!-- <div><div class="frame" style="text-align: center;"><i class="fa fa-info-circle fa-3x"></i><br>No hay contenido disponible aún.</div></div> -->
                 <!-- <div class="frame" style="text-align: center;">
                     <img width="100%" src="res/loading.gif">
                 </div> -->
@@ -93,5 +96,8 @@
                 </div>
             </content>
         </board>
+        <script type="text/javascript">
+            main.testConnection();
+        </script>
     </body>
 </html>
